fix x axis overflow

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -8,7 +8,13 @@
   --primary: #4AC959;
 }
 
+body, html{
+  overflow-x: hidden;
+}
+
 body {
+  min-width: 100vw;
+  min-height: 100vh;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
